edge/k8s-dashboard/manifests/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: k8s-dashboard
  labels:
    istio-injection: enabled
