edge/k8s-dashboard/manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: k8s-dashboard-deployment
  namespace: k8s-dashboard
spec:
  replicas: 1
  revisionHistoryLimit: 2
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  selector:
    matchLabels:
      app: k8s-dashboard
  template:
    metadata:
      labels:
        app: k8s-dashboard
    spec:
      automountServiceAccountToken: true
      serviceAccountName: k8s-dashboard-explorer
      containers:
        - name: dashboard
          image: montkim9/k8s-dashboard:9d3a8b
          resources:
            requests:
              cpu: "250m"
              memory: "512Mi"
            limits:
              cpu: "1000m"
              memory: "1Gi"
          readinessProbe:
            httpGet:
              path: /awsops
              port: 3000
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /awsops
              port: 3000
            periodSeconds: 30
          startupProbe:
            httpGet:
              path: /awsops
              port: 3000
            initialDelaySeconds: 10
            periodSeconds: 3
          ports:
            - containerPort: 3000
        - name: steampipe
          image: montkim9/steampipe-k8s:9d3a8b
          command: ["steampipe", "service", "start", "--foreground", "--database-listen", "network"]
          volumeMounts:
            - name: steampipe-config
              mountPath: /home/steampipe/.steampipe/config/kubernetes.spc
              subPath: kubernetes.spc
          ports:
            - containerPort: 9193
          resources:
            requests:
              cpu: "100m"
              memory: "1Gi"
            limits:
              cpu: "500m"
              memory: "2Gi"
      volumes:
        - name: steampipe-config
          configMap:
            name: steampipe-config
